--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   
   <body>
-    <a href="sufi.html">Sufi resources</a>
+    <a href="sufi/sufi.html">Sufi resources</a>
   </body>
 </html>
