--- a/sufi/sufi.html
+++ b/sufi/sufi.html
@@ -1,10 +1,15 @@
+<!DOCTYPE html>
+
 <html>
   <head>
     <title>Sufi resources</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   
   <body>
-    <a href="rajab_dua.html">Saint of Rajab dua</a>
+    <p>
+      <a href="rajab_dua.html">Saint of Rajab dua</a>
+    </p>
   </body>
 </html>
-
