--- a/sufi/rajab_dua.html
+++ b/sufi/rajab_dua.html
@@ -84,7 +84,7 @@
         <p class="three-lines">Fa ayyumā 'abdin min 'ibādika aw ’amatin min ’imā’ika ẓalamtu fī badanihi aw 'irdihi aw
           mālihi fa-ā'atihi min khazā’inika ’llatī lā tanquš. </p>
 
-        <p>Wa as’aluka an tukrimanī biraḥmatiki ’llatī wasi'at kulla shay’in wa lā
+        <p>Wa as’aluka an tukrimanī biraḥmatika ’llatī wasi'at kulla shay’in wa lā
           tuhīnanī bi-'adhābika</p>
 
         <p>wa tu'ṭīyyanī mā as’aluka fa-innī ḥaqīqun bi-raḥmatika ya arḥama ’r-Rāhimīn. </p>
