--- a/sufi/rajab_dua.html
+++ b/sufi/rajab_dua.html
@@ -65,7 +65,7 @@
 
         <p class="one-line">Bismillāhi ’r-Raḥmāni ’r-Raḥīm</p>
 
-        <p>Allāhuma innī istāghfiruka min kulli mā tubtu 'anhu ilayka thumma 'udtu fīh.</p>
+        <p>Allāhuma innī astāghfiruka min kulli mā tubtu 'anhu ilayka thumma 'udtu fīh.</p>
 
         <p>Wa astāghfiruka min kulli mā 'aradtu bihi wajhika fakhālatanī fīhi mā laysa fīhi riḍa-ak.</p>
 
@@ -79,7 +79,7 @@
 
         <hr />
 
-        <p>Allāhuma innī istaghfiruka min kulli ẓulmin ẓalamtu bihi 'ibādak.</p>
+        <p>Allāhuma innī astaghfiruka min kulli ẓulmin ẓalamtu bihi 'ibādak.</p>
 
         <p class="three-lines">Fa ayyumā 'abdin min 'ibādika aw ’amatin min ’imā’ika ẓalamtu fī badanihi aw 'irdihi aw
           mālihi fa-ā'atihi min khazā’inika ’llatī lā tanquš. </p>
@@ -100,27 +100,27 @@
 
         <p class="one-line">بِسْمِ ٱللهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</p>
 
-        <p>ٱللَّٰهُمَّ إني ٱسْتَغْفِرُكَ مِنْ كُلِ مَا تُبْتُ عَنْهُ إِلَيْكَ ثُمَّ عُدْتُ فِيه</p>
+        <p>ٱللَّٰهُمَّ إنِّي أَسْتَغْفِرُكَ مِنْ كُلِّ مَا تُبْتُ عَنْهُ إِلَيْكَ ثُمَّ عُدْتُ فِيه</p>
 
-        <p>وَٱسْتَغْفِرُكَ مِنْ كُلِّ مَا أرَدْتُ بِهِ وَجْهِكَ فَخَالَطَنِي فِيهِ مَا لَيْسَ فِيهِ رِضَائك</p>
+        <p>وَأَسْتَغْفِرُكَ مِنْ كُلِّ مَا أرَدْتُ بِهِ وَجْهِكَ فَخَالَطَنِي فِيهِ مَا لَيْسَ فِيهِ رِضَائك</p>
 
-        <p>وَٱسْتَغْفِرُكَ لِلنِّعَم الَّتِي تَقَوَيْتُ بِهَا عَلى مَعْصِيَتِك</p>
+        <p>وَأَسْتَغْفِرُكَ لِلنِّعَم الَّتِي تَقَوَيْتُ بِهَا عَلى مَعْصِيَتِك</p>
 
-        <p>وَٱسْتَغْفِرُكَ مِنْ ٱلذُّنُوبَ الَّتِي لا يَعْلَمُهَا غَيْرُكَ وَلا يَطَّلِعُ عَلَيْهَا اَحَدً سِوَاك</p>
+        <p>وَأَسْتَغْفِرُكَ مِنْ ٱلذُّنُوبَ الَّتِي لا يَعْلَمُهَا غَيْرُكَ وَلا يَطَّلِعُ عَلَيْهَا اَحَدً سِوَاك</p>
 
         <p>وَلا تَسَعُهَا إلاّ رَحْمَتِكَ وَلا تُنْجِي مِنْهَا إلاّ مَغْفِرَتُكَ وَحِلْمُكَ</p>
 
-        <p>لا إلَهَ إلاّ أنْتَ سُبْحَانَك إنِي كُنْتُ مِنَ ٱلظَّالِمِين</p>
+        <p>لا إلَهَ إلاّ أنْتَ سُبْحَانَك إنِّي كُنْتُ مِنَ ٱلظَّالِمِين</p>
 
         <hr />
 
-        <p>ٱللَّٰهُمَّ إني ٱسْتَغْفِرُكَ مِنْ كُلِ ظُلْمٍ ظَلَمْتُ بِهِ عِبَادَك</p>
+        <p>ٱللَّٰهُمَّ إنِّي أَسْتَغْفِرُكَ مِنْ كُلِّ ظُلْمٍ ظَلَمْتُ بِهِ عِبَادَك</p>
 
         <p class="three-lines">فَأيُمَا عَبْدٍ مِنْ عِبَادِكَ أوْ اَمَةٍ مِنْ إمَائِكَ ظَلَمْتُ فِي بَدَنِهِ أوْ عِرْضِهِ أوْ مَالِهِ فَأعَطِهِ مِنْ خَزَائِنِكَ ٱلَّتِي لا تَنْقُصْ</p>
 
         <p>وَأسْألُكَ أنْ تُكْرِمَنِي بِرَحْمَتِكَ ٱلَّتِي وَسِعَتْ كُلَّ شَيْءٍ وَلا تُهِينَنِي بِعَذَابِكَ </p>
 
-        <p>وَتُعْطِيَنِي مَا أسْألُكَ فَإنِي حَقِيقً بِرَحْمَتِكَ يَا أرْحَمَ ٱلرَّاحِمِينْ</p>
+        <p>وَتُعْطِيَنِي مَا أسْألُكَ فَإنِّي حَقِيقً بِرَحْمَتِكَ يَا أرْحَمَ ٱلرَّاحِمِينْ</p>
 
         <p>وَصَلَّى ٱللهُ عَلى سَيِّدِنَا مُحَمَّدٍ وَآلِهِ وَصَحْبِهِ أجْمَعِينْ</p>
 
