--- a/sufi/rajab_dua.html
+++ b/sufi/rajab_dua.html
@@ -69,9 +69,9 @@
 
         <p>Wa astāghfiruka min kulli mā 'aradtu bihi wajhika fakhālatanī fīhi mā laysa fīhi riḍa-ak.</p>
 
-        <p>Wa astāghfiruka li ’n-ni'am allatī taqawwaytu bihā 'alā ma'sīyatik.</p>
+        <p>Wa astāghfiruka liln-ni’am illati taqawwaytu bihā 'alā ma'sīyatik.</p>
 
-        <p>Wa astāghfiruka min adh-dhunūb allatī lā ya'lamuhā ghayruka wa lā yaṭṭali'u 'alayhā āḥadun siwāk</p>
+        <p>Wa astāghfiruka min adh-dhunūb illatī lā ya'lamuhā ghayruka wa lā yaṭṭali'u 'alayhā āḥadun siwāk</p>
 
         <p>wa lā tas'uha illa raḥmatika wa lā tunjī minhā illa maghfiratuka wa ḥilmuka.</p>
 
@@ -89,7 +89,7 @@
 
         <p>wa tu'ṭīyyanī mā as’aluka fa-innī ḥaqīqun bi-raḥmatika ya arḥama ’r-Rāhimīn. </p>
 
-        <p>Wa šalla-Allāhu 'alā Sayyidinā Muḥammadin wa 'alā ālihi wa šāḥbihi ajma'īn.</p>
+        <p>Wa šalla-Allāhu 'alā Sayyidinā Muḥammadin wa ālihi wa šāḥbihi ajma'īn.</p>
 
         <p>Wa lā ḥawla wa lā quwatta illa billāh il-'Alīyyi ’l-'Āẓīm. </p>
       </section>
@@ -104,9 +104,9 @@
 
         <p>وَأَسْتَغْفِرُكَ مِنْ كُلِّ مَا أرَدْتُ بِهِ وَجْهِكَ فَخَالَطَنِي فِيهِ مَا لَيْسَ فِيهِ رِضَائك</p>
 
-        <p>وَأَسْتَغْفِرُكَ لِلنِّعَم الَّتِي تَقَوَيْتُ بِهَا عَلى مَعْصِيَتِك</p>
+        <p>وَأَسْتَغْفِرُكَ لِلنِّعَم إِلَّتِي تَقَوَيْتُ بِهَا عَلى مَعْصِيَتِك</p>
 
-        <p>وَأَسْتَغْفِرُكَ مِنْ ٱلذُّنُوبَ الَّتِي لا يَعْلَمُهَا غَيْرُكَ وَلا يَطَّلِعُ عَلَيْهَا اَحَدً سِوَاك</p>
+        <p>وَأَسْتَغْفِرُكَ مِنْ ٱلذُّنُوبَ إِلَّتِي لا يَعْلَمُهَا غَيْرُكَ وَلا يَطَّلِعُ عَلَيْهَا اَحَدً سِوَاك</p>
 
         <p>وَلا تَسَعُهَا إلاّ رَحْمَتِكَ وَلا تُنْجِي مِنْهَا إلاّ مَغْفِرَتُكَ وَحِلْمُكَ</p>
 
