--- a/sufi/rajab_dua.html
+++ b/sufi/rajab_dua.html
@@ -106,7 +106,7 @@
 
         <p>وَأَسْتَغْفِرُكَ لِلنِّعَم إِلَّتِي تَقَوَيْتُ بِهَا عَلى مَعْصِيَتِك</p>
 
-        <p>وَأَسْتَغْفِرُكَ مِنْ ٱلذُّنُوبَ إِلَّتِي لا يَعْلَمُهَا غَيْرُكَ وَلا يَطَّلِعُ عَلَيْهَا اَحَدً سِوَاك</p>
+        <p>وَأَسْتَغْفِرُكَ مِنْ ٱلذُّنُوب إِلَّتِي لا يَعْلَمُهَا غَيْرُكَ وَلا يَطَّلِعُ عَلَيْهَا اَحَدً سِوَاك</p>
 
         <p>وَلا تَسَعُهَا إلاّ رَحْمَتِكَ وَلا تُنْجِي مِنْهَا إلاّ مَغْفِرَتُكَ وَحِلْمُكَ</p>
 
