--- a/sufi/sufi.html
+++ b/sufi/sufi.html
@@ -11,5 +11,10 @@
     <p>
       <a href="rajab_dua.html">Saint of Rajab dua</a>
     </p>
+
+    <p>
+      <a href="naqshbandi_awrad.html">Naqshbandi Awrad/Zikr</a>
+    </p>
+
   </body>
 </html>
