--- a/sufi/naqshbandi_awrad.html
+++ b/sufi/naqshbandi_awrad.html
@@ -25,8 +25,8 @@
        padding: 1rem 0 0 1.25rem;   
       }
       ol {
-          padding: 0 1rem;
-          margin-left: 0.25rem; 
+          padding: 0 0.5rem;
+          margin-left: 0rem; 
       }
       li {
           margin: 0.5rem 0;
@@ -53,14 +53,16 @@
       }
       li p {
           margin: 0;
+          text-align: justify;
       }
       section > header {
           text-align: center;
       }
 
-      @media screen and (max-width: 975px) {
+      @media screen and (max-width: 600px) {
         body article {
-          text-align: justify;
+          font-size: 125%;
+          line-height: 150%;
           -webkit-touch-callout: none; /* iOS Safari */
           -webkit-user-select: none; /* Chrome/Safari/Opera */
         }
