--- a/sufi/rajab_dua.html
+++ b/sufi/rajab_dua.html
@@ -82,14 +82,14 @@
         <p>Allāhuma innī astaghfiruka min kulli ẓulmin ẓalamtu bihi 'ibādak.</p>
 
         <p class="three-lines">Fa ayyumā 'abdin min 'ibādika aw ’amatin min ’imā’ika ẓalamtu fī badanihi aw 'irdihi aw
-          mālihi fa-ā'atihi min khazā’inika ’llatī lā tanquš. </p>
+          mālihi fa-ā'atihi min khazā’inika ’llatī lā tanquṣ. </p>
 
         <p>Wa as’aluka an tukrimanī biraḥmatika ’llatī wasi'at kulla shay’in wa lā
           tuhīnanī bi-'adhābika</p>
 
         <p>wa tu'ṭīyyanī mā as’aluka fa-innī ḥaqīqun bi-raḥmatika ya arḥama ’r-Rāhimīn. </p>
 
-        <p>Wa šalla-Allāhu 'alā Sayyidinā Muḥammadin wa ālihi wa šāḥbihi ajma'īn.</p>
+        <p>Wa ṣalla-Allāhu 'alā Sayyidinā Muḥammadin wa ālihi wa ṣāḥbihi ajma'īn.</p>
 
         <p>Wa lā ḥawla wa lā quwatta illa billāh il-'Alīyyi ’l-'Āẓīm. </p>
       </section>
