--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <p>
       <a href="sufi/sufi.html">Sufi resources</a>
     </p>
+
+    <p>
+      <a href="french/french.html">French resources</a>
+    </p>
   </body>
 </html>
