--- a/french/french.html
+++ b/french/french.html
@@ -2,14 +2,30 @@
 
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>French resources</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="https://oraprdnt.uqtr.uquebec.ca/favicon.ico">
+
+    <style>
+        body {
+            text-align: center;
+            color: #56c459;
+        }
+    </style>
   </head>
   
   <body>
-    <p>
-      <a href="french_conjugations.html">French conjugations</a>
-    </p>
+    <h2>La conjugaison des temps de verbes</h2>
+    <h3>
+        <a href="french_conjugations.html?Le présent">Le présent</a>
+    </h3>
+
+    <h3>
+        <a href="french_conjugations.html?Le futur simple">Le futur simple</a>
+    </h3>
+
   </body>
 </html>
+
