--- a/french/french.html
+++ b/french/french.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>French resources</title>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="icon" type="image/x-icon" href="https://oraprdnt.uqtr.uquebec.ca/favicon.ico">
+  <title>French resources</title>
 
-    <style>
-        body {
-            text-align: center;
-            color: #56c459;
-        }
-    </style>
-  </head>
-  
-  <body>
-    <h2>La conjugaison des temps de verbes</h2>
-    <h3>
-        <a href="french_conjugations.html?Le présent">Le présent</a>
-    </h3>
+  <link rel="icon" type="image/x-icon" href="https://oraprdnt.uqtr.uquebec.ca/favicon.ico">
 
-    <h3>
-        <a href="french_conjugations.html?Le futur simple">Le futur simple</a>
-    </h3>
+  <style>
+    body {
+      text-align: center;
+      color: #56c459;
+    }
+  </style>
+</head>
 
-  </body>
+<body>
+  <h2>La conjugaison des temps de verbes</h2>
+  <h3>
+    <a href="french_conjugations.html?Le présent">Le présent</a>
+  </h3>
+
+  <h3>
+    <a href="french_conjugations.html?Le futur simple">Le futur simple</a>
+  </h3>
+
+  <h3>
+    <a href="french_conjugations.html?L'imparfait">L'imparfait</a>
+  </h3>
+
+</body>
+
 </html>
-
