--- a/french/french.html
+++ b/french/french.html
@@ -31,6 +31,10 @@
     <a href="french_conjugations.html?L'imparfait">L'imparfait</a>
   </h3>
 
+  <h3>
+    <a href="french_conjugations.html?Le passé composé">Le passé composé</a>
+  </h3>
+
 </body>
 
 </html>
