--- a/french/audio_test.html
+++ b/french/audio_test.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Audio test</title>
+
+    <link rel="icon" type="image/x-icon" href="https://oraprdnt.uqtr.uquebec.ca/favicon.ico">
 </head>
 
 <body>
