--- a/french/french_conjugations.html
+++ b/french/french_conjugations.html
@@ -9,17 +9,17 @@
     <link rel="icon" type="image/x-icon" href="https://oraprdnt.uqtr.uquebec.ca/favicon.ico">
     <link rel="stylesheet" href="styles.css">
 
-    <script type="module" src="./Page.js"></script>
+    <script type="module" src="./Page.mjs"></script>
 
     <script type="module">
         "use strict";
 
-        import { Page } from './Page.js';
+        import { Page } from './Page.mjs';
 
-        const verbList = Page.getVerbList(window.location.search);
+        const verbListObject = Page.getVerbList(window.location.search);
 
         const title = window.decodeURIComponent(window.location.search).substring(1);
-        Page.build(verbList, title);
+        Page.build(verbListObject.verbList, verbListObject.fileFolder, title);
 
         //console.log(new XMLSerializer().serializeToString(document));
     </script>
@@ -46,6 +46,17 @@
             <div>
                 <label class="pronoun"></label>
                 <input type="text" />
+                <span class="speakerphone">
+                    <audio></audio>
+                    <svg width="20" height="20" viewBox="0 0 24 24" focusable="false" class=" NMm5M">
+                        <path
+                            d="M3 9v6h4l5 5V4L7 9H3zm7-.17v6.34L7.83 13H5v-2h2.83L10 8.83zM16.5 12A4.5 4.5 0 0 0 14 7.97v8.05c1.48-.73 2.5-2.25 2.5-4.02z">
+                        </path>
+                        <path
+                            d="M14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77 0-4.28-2.99-7.86-7-8.77z">
+                        </path>
+                    </svg>
+                </span>
             </div>
         </template>
 
