--- a/french/french_conjugations.html
+++ b/french/french_conjugations.html
@@ -43,7 +43,7 @@
         </template>
 
         <template id="template-input">
-            <div>
+            <div class="conjugation-line">
                 <label class="pronoun"></label>
                 <input type="text" />
                 <span class="speakerphone">
