--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <meta http-equiv="refresh" content="0;url=./french" />
+    
     <title>List of links</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
