--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;url=./french" />
+    <script type='text/javascript'>
+        //using "replace" removes the current page from browser history
+        location.replace('./french');
+    </script>
     
     <title>List of links</title>
     
