--- a/french/french_conjugations.html
+++ b/french/french_conjugations.html
@@ -6,7 +6,7 @@
 
     <title>Présent Simple</title>
 
-    <link rel="icon" type="image/x-icon" href="https://oraprdnt.uqtr.uquebec.ca/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/eiffel-tower.ico">
     <link rel="stylesheet" href="styles.css">
 
     <script type="module" src="./Page.mjs"></script>
