--- a/french/index.html
+++ b/french/index.html
@@ -7,7 +7,7 @@
 
   <title>French resources</title>
 
-  <link rel="icon" type="image/x-icon" href="https://oraprdnt.uqtr.uquebec.ca/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="images/eiffel-tower.ico">
 
   <style>
     body {
