--- a/french/index.html
+++ b/french/index.html
@@ -35,6 +35,10 @@
     <a href="french_conjugations.html?Le futur simple">Le futur simple</a>
   </h3>
 
+  <h3>
+    <a href="french_conjugations.html?Le conditionnel présent">Le conditionnel présent</a>
+  </h3>
+
 </body>
 
 </html>
