--- a/french/french_conjugations.html
+++ b/french/french_conjugations.html
@@ -9,12 +9,10 @@
     <link rel="icon" type="image/x-icon" href="images/eiffel-tower.ico">
     <link rel="stylesheet" href="styles.css">
 
-    <script type="module" src="./Page.mjs"></script>
-
     <script type="module">
         "use strict";
 
-        import { Page } from './Page.mjs';
+        import { Page } from './js/Page.mjs';
 
         const verbListObject = Page.getVerbList(window.location.search);
 
