--- a/french/index.html
+++ b/french/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="fr">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -36,7 +36,9 @@
   </h3>
 
   <h3>
-    <a href="french_conjugations.html?Le conditionnel présent">Le conditionnel présent</a>
+    <a href="french_conjugations.html?Le conditionnel présent">Le conditionnel présent</a>,
+
+    <a href="exercise_conditionalpresent.html">Exercise</a>
   </h3>
 
 </body>
