--- a/french/exercise_conditionalpresent.html
+++ b/french/exercise_conditionalpresent.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<!-- exercises are taken from https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F851010166_Le_conditionnel_pr_sent_exercices_et_corrig_.pdf -->
+
 <html lang="fr">
 
 <head>
@@ -102,8 +104,8 @@
             <h4>Transformez les infinitifs en conditionnels présents.</h4>
 
             <div>
-                <span class="left"><b>Promettre :</b></span>
-                <span class="right"><b>Ils ont promis à Sylvie :</b></span>
+                <span><b>Promettre :</b></span>
+                <span><b>Ils ont promis à Sylvie :</b></span>
             </div>
             <ol>
                 <li>
