--- a/french/index.html
+++ b/french/index.html
@@ -20,11 +20,11 @@
 <body>
   <h2>La conjugaison des temps de verbes</h2>
   <h3>
-    <a href="french_conjugations.html?Le présent">Le présent</a>
+    <a href="french_conjugations.html?Le%20pr%C3%A9sent">Le présent</a>
   </h3>
 
   <h3>
-    <a href="french_conjugations.html?Le passé composé">Le passé composé</a>
+    <a href="french_conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">Le passé composé</a>
   </h3>
 
   <h3>
@@ -32,11 +32,11 @@
   </h3>
 
   <h3>
-    <a href="french_conjugations.html?Le futur simple">Le futur simple</a>
+    <a href="french_conjugations.html?Le%20futur%20simple">Le futur simple</a>
   </h3>
 
   <h3>
-    <a href="french_conjugations.html?Le conditionnel présent">Le conditionnel présent</a>,
+    <a href="french_conjugations.html?Le%20conditionnel%20pr%C3%A9sent">Le conditionnel présent</a>,
 
     <a href="exercise_conditionalpresent.html">Exercise</a>
   </h3>
