--- a/french/index.html
+++ b/french/index.html
@@ -41,6 +41,10 @@
     <a href="exercise_conditionalpresent.html">Exercise</a>
   </h3>
 
+  <h3>
+    <a href="french_conjugations_mixed.html?Conjugaisons mélangées">Conjugaisons mélangées</a>
+  </h3>
+
 </body>
 
 </html>
