--- a/french/french_conjugations_mixed.html
+++ b/french/french_conjugations_mixed.html
@@ -16,54 +16,81 @@
 
         const verbListObject = PageBuilderForManyTenses.getVerbList();
 
+        let tenseList = [];
+
+        document.querySelectorAll('.tense-checkbox').forEach((checkboxElement) => {
+            checkboxElement.onclick = () => {
+                PageBuilderForManyTenses.buildForManyTenses(verbListObject, title);
+            }
+        });
+
         const title = window.decodeURIComponent(window.location.search).substring(1);
-        PageBuilderForManyTenses.buildForManyTenses(verbListObject, title, 3);
+        PageBuilderForManyTenses.buildForManyTenses(verbListObject, title);
     </script>
 </head>
 
 
 <body>
-    <article class="verb-list-mixed-tenses">
-        <header>
-            <h3 id="page-title"></h3>
+    <main>
+        <article class="verb-list-mixed-tenses">
+            <header>
+                <h3 id="page-title">Temps de conjugaison</h3>
 
-            <h4>Conjuguez ces <span id="number-of-verbs"></span> verbes.</h5>
-        </header>
+                <label>
+                    <input type="checkbox" class="tense-checkbox" id="present" checked="checked">Le présent
+                </label>
+                <label>
+                    <input type="checkbox" class="tense-checkbox" id="presentperfect" checked="checked">Le passé composé
+                </label>
+                <label>
+                    <input type="checkbox" class="tense-checkbox" id="imperfect" checked="checked">L'imparfait
+                </label>
+                <label>
+                    <input type="checkbox" class="tense-checkbox" id="future" checked="checked">Le futur simple
+                </label>
+                <label>
+                    <input type="checkbox" class="tense-checkbox" id="conditionalpresent" checked="checked">Le
+                    conditionnel présent
+                </label>
 
-        <div id="verb-list"></div>
+                <h4>Conjuguez ces <span id="number-of-verbs"></span> verbes.</h4>
+            </header>
 
-        <template id="template-verb-block">
-            <div class="verb-block">
-                <hr />  
-                <h4 class="infinitive"></h4>
-            </div>
-        </template>
+            <div id="verb-list"></div>
 
-        <template id="template-conjugations-for-one-tense-block">
-            <div class="conjugations-for-one-tense-block">
-                <h4 class="tense"></h4>
-            </div>
-        </template>
+            <template id="template-verb-block">
+                <div class="verb-block">
+                    <hr />
+                    <h4 class="infinitive"></h4>
+                </div>
+            </template>
 
-        <template id="template-input">
-            <div class="conjugation-line">
-                <label class="pronoun"></label>
-                <input type="text" />
-                <span class="speakerphone">
-                    <audio></audio>
-                    <svg width="20" height="20" viewBox="0 0 24 24" focusable="false" class=" NMm5M">
-                        <path
-                            d="M3 9v6h4l5 5V4L7 9H3zm7-.17v6.34L7.83 13H5v-2h2.83L10 8.83zM16.5 12A4.5 4.5 0 0 0 14 7.97v8.05c1.48-.73 2.5-2.25 2.5-4.02z">
-                        </path>
-                        <path
-                            d="M14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77 0-4.28-2.99-7.86-7-8.77z">
-                        </path>
-                    </svg>
-                </span>
-            </div>
-        </template>
+            <template id="template-conjugations-for-one-tense-block">
+                <div class="conjugations-for-one-tense-block">
+                    <h4 class="tense"></h4>
+                </div>
+            </template>
 
-    </article>
+            <template id="template-input">
+                <div class="conjugation-line">
+                    <label class="pronoun"></label>
+                    <input type="text" />
+                    <span class="speakerphone">
+                        <audio></audio>
+                        <svg width="20" height="20" viewBox="0 0 24 24" focusable="false" class=" NMm5M">
+                            <path
+                                d="M3 9v6h4l5 5V4L7 9H3zm7-.17v6.34L7.83 13H5v-2h2.83L10 8.83zM16.5 12A4.5 4.5 0 0 0 14 7.97v8.05c1.48-.73 2.5-2.25 2.5-4.02z">
+                            </path>
+                            <path
+                                d="M14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77 0-4.28-2.99-7.86-7-8.77z">
+                            </path>
+                        </svg>
+                    </span>
+                </div>
+            </template>
+
+        </article>
+    </main>
 </body>
 
 </html>
