fine-tuned mixed tenses

--- a/french/index.html
+++ b/french/index.html
@@ -42,6 +42,11 @@
   </h3>
 
   <h3>
+    <a href="french_conjugations.html?Le conditionnel passé">Le conditionnel passé</a>
+  </h3>
+
+  <br />
+  <h3>
     <a href="french_conjugations_mixed.html?Conjugaisons mélangées">Conjugaisons mélangées</a>
   </h3>
 
