--- a/french/index.html
+++ b/french/index.html
@@ -42,7 +42,8 @@
   </h3>
 
   <h3>
-    <a href="french_conjugations.html?Le conditionnel passé">Le conditionnel passé</a>
+    <a href="french_conjugations.html?Le conditionnel passé">Le conditionnel passé</a>, 
+    <a href="exercise_conditionalperfect.html">Exercise</a>
   </h3>
 
   <br />
