added text excercises for future tense

--- a/french/index.html
+++ b/french/index.html
@@ -12,7 +12,7 @@
   <style>
     body {
       text-align: center;
-      color: #56c459;
+      color: #007f00;
     }
   </style>
 </head>
@@ -32,7 +32,8 @@
   </h3>
 
   <h3>
-    <a href="french_conjugations.html?Le%20futur%20simple">Le futur simple</a>
+    <a href="french_conjugations.html?Le%20futur%20simple">Le futur simple</a>,
+    <a href="exercise_future.html">Exercise</a>
   </h3>
 
   <h3>
@@ -42,7 +43,7 @@
   </h3>
 
   <h3>
-    <a href="french_conjugations.html?Le conditionnel passé">Le conditionnel passé</a>, 
+    <a href="french_conjugations.html?Le conditionnel passé">Le conditionnel passé</a>,
     <a href="exercise_conditionalperfect.html">Exercise</a>
   </h3>
 
