styles for text excercise for future tense

--- a/french/exercise_future.html
+++ b/french/exercise_future.html
@@ -41,9 +41,9 @@
 
                     <li>
                         Demain, nous (<b title="nous lèverons">se lever</b>)
-                        <input type="text" pattern="nous lèverons">
+                        <input type="text" class="wide" pattern="nous lèverons">
                         tôt et nous (<b title="nous promènerons">se promener</b>)
-                        <input type="text" pattern="nous promènerons">
+                        <input type="text" class="wide" pattern="nous promènerons">
                         dans la forêt.
                     </li>
 
@@ -59,7 +59,7 @@
                         Ce soir, nous (<b title="regarderons">regarder</b>)
                         <input type="text" pattern="regarderons">
                         des photos et nous (<b title="nous souviendrons">se souvenir</b>)
-                        <input type="text" pattern="nous souviendrons">
+                        <input type="text" class="wide" pattern="nous souviendrons">
                         des beaux moments.
                     </li>
 
@@ -204,7 +204,7 @@
                     <li>
                         Quand je (<b title="vireviendraiendrez">revenir</b>)
                         <input type="text" pattern="reviendrai">
-                        , je (<b title="j'offrirai">offrir</b>)
+                        , (<b title="j'offrirai">je offrir</b>)
                         <input type="text" pattern="j'offrirai">
                         beaucoup d’amour à ceux que j’aime et je (<b title="couvrirai">couvrir</b>)
                         <input type="text" pattern="couvrirai">
