added text excercise for imperfect tense

--- a/french/index.html
+++ b/french/index.html
@@ -28,7 +28,8 @@
   </h3>
 
   <h3>
-    <a href="french_conjugations.html?L'imparfait">L'imparfait</a>
+    <a href="french_conjugations.html?L'imparfait">L'imparfait</a>,
+    <a href="exercise_imperfect.html">Exercise</a>
   </h3>
 
   <h3>
