added text excercises for present tense

--- a/french/exercise_imperfect.html
+++ b/french/exercise_imperfect.html
@@ -71,7 +71,7 @@
 
                     <li>
                         Nous (<b title="commencions">commencer</b>)
-                        <input type="text" pattern="commencions">
+                        <input type="text" class="wide" pattern="commencions">
                         un nouveau cours.
                     </li>
 
