--- a/french/index.html
+++ b/french/index.html
@@ -20,7 +20,8 @@
 <body>
   <h2>La conjugaison des temps de verbes</h2>
   <h3>
-    <a href="french_conjugations.html?Le%20pr%C3%A9sent">Le présent</a>
+    <a href="french_conjugations.html?Le%20pr%C3%A9sent">Le présent</a>,
+    <a href="exercise_present.html">Exercise</a>
   </h3>
 
   <h3>
