--- a/french/exercise_future.html
+++ b/french/exercise_future.html
@@ -282,8 +282,8 @@
                     </li>
 
                     <li>
-                        Je (<b title="enverrai">envoyer</b>)
-                        <input type="text" pattern="enverrai">
+                        (<b title="enverrai">Je envoyer</b>)
+                        <input type="text" pattern="J'enverrai">
                         la facture, il la (<b title="paiera">payer</b>)
                         <input type="text" pattern="paiera">
                         aussitôt qu’il la (<b title="recevra">recevoir</b>)
