--- a/french/exercise_present.html
+++ b/french/exercise_present.html
@@ -137,7 +137,7 @@
 
                     <li>
                         (<b title="J'ouvre">Je ouvrir</b>)
-                        <input type="text" pattern="J'ouvre">
+                        <input type="text" pattern="J|j'ouvre">
                         la porte et le chien (<b title="court">courir</b>)
                         <input type="text" pattern="court">
                         à l’extérieur.
