--- a/french/exercise_imperfect.html
+++ b/french/exercise_imperfect.html
@@ -137,7 +137,7 @@
 
                     <li>
                         (<b title="J'ouvrais">Je ouvrir</b>)
-                        <input type="text" pattern="J'ouvrais">
+                        <input type="text" pattern="J|j'ouvrais">
                         la porte et le chien (<b title="courait">courir</b>)
                         <input type="text" pattern="courait">
                         à l’extérieur.
