added text excercises for present perfect

--- a/french/index.html
+++ b/french/index.html
@@ -25,7 +25,8 @@
   </h3>
 
   <h3>
-    <a href="french_conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">Le passé composé</a>
+    <a href="french_conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">Le passé composé</a>,
+    <a href="exercise_presentperfect.html">Exercise</a>
   </h3>
 
   <h3>
