--- a/french/exercise_presentperfect.html
+++ b/french/exercise_presentperfect.html
@@ -220,9 +220,9 @@
                     <li>
                         (<b title="J'ai perdu">Je perdre</b>)
                         <input type="text" pattern="J'ai perdu">
-                        mon temps : je (<b title="n'ai fait">ne faire</b>)
-                        <input type="text" pattern="n'ai fait">
-                        rien.
+                        mon temps : je (<b title="n'ai rien fait">ne faire rien</b>)
+                        <input type="text" pattern="n'ai rien fait">
+                        .
                     </li>
 
                     <li>
@@ -268,7 +268,7 @@
                     <li>
                         Tu (<b title="as pensé">penser</b>)
                         <input type="text" pattern="as pensé">
-                        toujours à ton amoureux.
+                        à ton amoureux.
                     </li>
 
                     <li>
@@ -340,7 +340,7 @@
                         <input type="text" pattern="ont fait">
                         à manger et ils (<b title="ont nettoyé">nettoyer</b>)
                         <input type="text" pattern="ont nettoyé">
-                        toujours la cuisine.
+                        la cuisine.
                     </li>
                 </ol>
             </section>
