--- a/french/exercise_presentperfect.html
+++ b/french/exercise_presentperfect.html
@@ -7,7 +7,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>L’imparfait</title>
+    <title>Le passé composé</title>
 
     <link rel="icon" type="image/x-icon" href="images/eiffel-tower.ico">
     <link rel="stylesheet" href="styles.css">
@@ -25,7 +25,7 @@
                 <ol>
                     <li>
                         (<b title="J'ai eu">Je avoir</b>)
-                        <input type="text" pattern="J'ai eu">
+                        <input type="text" pattern="J|j'ai eu">
                         soif et (<b title="j'ai pris">je prendre</b>)
                         <input type="text" pattern="j'ai pris">
                         un café.
@@ -34,8 +34,8 @@
                     <li>
                         Tu (<b title="as voulu">vouloir</b>)
                         <input type="text" pattern="as voulu">
-                        me voir, tu (<b title="arrivé">arriver</b>)
-                        <input type="text" pattern="arrivé">
+                        me voir, tu (<b title="es arrivé">arriver</b>)
+                        <input type="text" pattern="es arrivé">
                         tôt.
                     </li>
 
@@ -69,7 +69,7 @@
 
                     <li>
                         Nous (<b title="avons commencé">commencer</b>)
-                        <input type="text" pattern="avons commencé">
+                        <input type="text" class="wide" pattern="avons commencé">
                         un nouveau cours.
                     </li>
 
@@ -99,7 +99,7 @@
 
                     <li>
                         Nous (<b title="avons réfléchi">réfléchir</b>)
-                        <input type="text" pattern="avons réfléchi">
+                        <input type="text" class="wide" pattern="avons réfléchi">
                         et nous (<b title="avons choisi">choisir</b>)
                         <input type="text" pattern="avons choisi">
                         un bonbon.
@@ -135,7 +135,7 @@
 
                     <li>
                         (<b title="J'ai ouvert">Je ouvrir</b>)
-                        <input type="text" pattern="J'ai ouvert">
+                        <input type="text" pattern="J|j'ai ouvert">
                         la porte et le chien (<b title="a couru">courir</b>)
                         <input type="text" pattern="a couru">
                         à l’extérieur.
@@ -144,8 +144,8 @@
                     <li>
                         Elles (<b title="ont fini">finir</b>)
                         <input type="text" pattern="ont fini">
-                        leurs devoirs et ils (<b title="sont sortis ">sortir</b>)
-                        <input type="text" pattern="sont sortis ">
+                        leurs devoirs et ils (<b title="sont sortis">sortir</b>)
+                        <input type="text" pattern="sont sortis">
                         jouer.
                     </li>
 
@@ -183,7 +183,7 @@
 
                     <li>
                         Tu (<b title="n'as pas oublié">ne oublier pas</b>)
-                        <input type="text" pattern="n'as pas oublié">
+                        <input type="text" class="wide" pattern="n'as pas oublié">
                         ! Tu (<b title="as nettoyé">nettoyer</b>)
                         <input type="text" pattern="as nettoyé">
                         la maison.
@@ -210,7 +210,7 @@
                     </li>
 
                     <li>
-                        Quand je (<b title="j'ai lu">lire</b>)
+                        Quand (<b title="j'ai lu">je lire</b>)
                         <input type="text" pattern="j'ai lu">
                         , (<b title="j'ai découvert">je découvrir</b>)
                         <input type="text" pattern="j'ai découvert">
@@ -219,7 +219,7 @@
 
                     <li>
                         (<b title="J'ai perdu">Je perdre</b>)
-                        <input type="text" pattern="J'ai perdu">
+                        <input type="text" pattern="J|j'ai perdu">
                         mon temps : je (<b title="n'ai rien fait">ne faire rien</b>)
                         <input type="text" pattern="n'ai rien fait">
                         .
@@ -261,7 +261,7 @@
                         Tu (<b title="as entendu">entendre</b>)
                         <input type="text" pattern="as entendu">
                         ce bruit ? (<b title="J'ai compris">Je comprendre</b>)
-                        <input type="text" pattern="J'ai compris">
+                        <input type="text" pattern="J|j'ai compris">
                         des mots...
                     </li>
 
@@ -287,7 +287,7 @@
 
                     <li>
                         (<b title="J'ai promis">Je promettre</b>)
-                        <input type="text" pattern="J'ai promis">
+                        <input type="text" pattern="J|j'ai promis">
                         de dire la vérité.
                     </li>
 
