--- a/french/exercise_present.html
+++ b/french/exercise_present.html
@@ -7,7 +7,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>L’imparfait</title>
+    <title>Le présent</title>
 
     <link rel="icon" type="image/x-icon" href="images/eiffel-tower.ico">
     <link rel="stylesheet" href="styles.css">
