added page for verb concordance (not complete)

--- a/french/index.html
+++ b/french/index.html
@@ -21,33 +21,34 @@
   <h2>La conjugaison des temps de verbes</h2>
   <h3>
     <a href="french_conjugations.html?Le%20pr%C3%A9sent">Le présent</a>,
-    <a href="exercise_present.html">Exercise</a>
+    <a href="pages/exercise_present.html">Exercise</a>
   </h3>
 
   <h3>
     <a href="french_conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">Le passé composé</a>,
-    <a href="exercise_presentperfect.html">Exercise</a>
+    <a href="pages/exercise_presentperfect.html">Exercise</a>
   </h3>
 
   <h3>
     <a href="french_conjugations.html?L'imparfait">L'imparfait</a>,
-    <a href="exercise_imperfect.html">Exercise</a>
+    <a href="pages/exercise_imperfect.html">Exercise</a>,
+    <a href="pages/exercise_concordance.html">Exercise de concordance</a>
   </h3>
 
   <h3>
     <a href="french_conjugations.html?Le%20futur%20simple">Le futur simple</a>,
-    <a href="exercise_future.html">Exercise</a>
+    <a href="pages/exercise_future.html">Exercise</a>
   </h3>
 
   <h3>
     <a href="french_conjugations.html?Le%20conditionnel%20pr%C3%A9sent">Le conditionnel présent</a>,
 
-    <a href="exercise_conditionalpresent.html">Exercise</a>
+    <a href="pages/exercise_conditionalpresent.html">Exercise</a>
   </h3>
 
   <h3>
     <a href="french_conjugations.html?Le conditionnel passé">Le conditionnel passé</a>,
-    <a href="exercise_conditionalperfect.html">Exercise</a>
+    <a href="pages/exercise_conditionalperfect.html">Exercise</a>
   </h3>
 
   <br />
