--- a/french/pages/exercise_conditionalpresent.html
+++ b/french/pages/exercise_conditionalpresent.html
@@ -9,8 +9,8 @@
 
     <title>Le conditionnel présent</title>
 
-    <link rel="icon" type="image/x-icon" href="images/eiffel-tower.ico">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="../images/eiffel-tower.ico">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
